--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
-    "react-uuid": "^1.0.2"
+    "react-uuid": "^1.0.2",
+    "use-image": "^1.0.8"
   },
   "scripts": {
     "start": "react-scripts start",
